fixed sorting algorithm and test